--- a/index.html
+++ b/index.html
@@ -1,7 +1,25 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>Hello World</h1>
-        <p>Hosted with GitHub Pages.</p>
+        <h1>Troy Jasper</h1>
+        <p>Portfolio</p>
+
+        <h1>Blog</h1>
+        <p>Should write blog posts.</p>
+        <h1>Data Science</h1>
+        <p>Link to data science projects</p>
+        <h1>Art and Animation</h1>
+        <p>Link to digital art and animation projects</p>
+        <h1>3D</h1>
+        <p>Link to 3D art and animation projects</p>
+        <h1>Music</h1>
+        <p>Link to music projects</p>
+        <h1>Sound Design</h1>
+        <p>Sound design portfolio</p>
+        <h1>Game Design</h1>
+        <p>Portfolio of games I've made</p>
+
+        <h1>Comic</h1>
+        <p>Put comic strip here</p>
     </body>
 </html>
